Fix title accordion text align

--- a/src/components/Accordion/Accordion.scss
+++ b/src/components/Accordion/Accordion.scss
@@ -53,6 +53,7 @@
     font-weight: 800;
     font-size: 16px;
     line-height: 20px;
+    text-align: left;
   }
 
   &__content {
